--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <label for="prenom">Prénom :</label><br>
     <input type="text" id="prenom" name="prenom" required><br><br>
 
+    <label for="email">Email :</label><br>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="numéro">Numéro :</label><br>
+    <input type="numéro" id="numéro" name="numéro" required><br><br>
 
     <label for="message">Message :</label><br>
     <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
