--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
     <label for="message">Message :</label><br>
     <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
 
+    <label for="service">Choisissez un service :</label><br>
+    <select id="service" name="service" required>
+      <option value="">-- Sélectionnez un service --</option>
+      <option value="commercial">Commercial</option>
+      <option value="technique">Technique</option>
+      <option value="autres">Autres</option>
+    </select>
+    
+
     <input type="submit" value="Envoyer">
   </form>
+
+
+  
 </body>
 </html>
