--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
 </head>
 <body>
   <h2>Formulaire de contact</h2>
-  <form action="#" method="post">
-    <label for="nom">Nom :</label><br>
-    <input type="text" id="nom" name="nom" required><br><br>
+  <form action="https://cplr.oriatec-host.fr/support.php" method="post">
+    <label for="name">Nom :</label><br>
+    <input type="text" id="name" name="name" required><br><br>
 
-    <label for="prenom">Prénom :</label><br>
-    <input type="text" id="prenom" name="prenom" required><br><br>
+    <label for="firstname">Prénom :</label><br>
+    <input type="text" id="firstname" name="firstname" required><br><br>
 
     <label for="email">Email :</label><br>
     <input type="email" id="email" name="email" required><br><br>
 
-    <label for="numéro">Numéro :</label><br>
-    <input type="numéro" id="numéro" name="numéro" required><br><br>
-
-    <label for="message">Message :</label><br>
-    <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
+    <label for="phone">Numéro :</label><br>
+    <input type="tel" id="phone" name="phone" required><br><br>
 
     <label for="service">Choisissez un service :</label><br>
     <select id="service" name="service" required>
@@ -28,13 +25,12 @@
       <option value="commercial">Commercial</option>
       <option value="technique">Technique</option>
       <option value="autres">Autres</option>
-    </select>
-    
+    </select><br><br>
+
+    <label for="message">Message :</label><br>
+    <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
 
     <input type="submit" value="Envoyer">
   </form>
-
-
-  
 </body>
 </html>
