--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h2>Formulaire de contact</h2>
-  <form action="https://cplr.oriatec-host.fr/support.php" method="post">
+  <form action="https://n8n.oriatec.fr/webhook-test/031907c4-d988-4e98-a679-57716577e514" method="post">
     <label for="name">Nom :</label><br>
     <input type="text" id="name" name="name" required><br><br>
 
